# Dying-is-an-option

./: .gitignore  README.md
Dying is an option/: CMakeLists.txt  EndScreen.cpp  EndScreen.hpp  Enemy.cpp  Enemy.hpp  Main.cpp  Maze.cpp  Maze.hpp  MazeNode.cpp  MazeNode.hpp  Player.cpp  Player.hpp
Dying is an option/osx/: Icon.icns  Info.plist.in  ResourcePath.mm
Dying is an option/other/: ResourcePath.cpp
